Revert "Merge pull request #1515 from libris/feature/bulk-merge-uris-as-strings"
This reverts commit 89c697abfdf8713e5e53687f3ad3d5b5eea7c2d8, reversing
changes made to 49b735d443c456cd015e74ca8f6030a523f354f4.